Fix: Sidebar mobile dropdown z-index stacking context

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -9,6 +9,8 @@
 .sidebar {
   -webkit-transform: translate3d(0, 0 , 0);
           transform: translate3d(0, 0 , 0);
+  position: relative;
+  z-index: 20;
 
   @include clearfix();
   margin-bottom: 1em;
